--- a/fancy-weather/src/components/Weather/style.scss
+++ b/fancy-weather/src/components/Weather/style.scss
@@ -1,3 +1,9 @@
+@media (min-width: 0px) and (max-width: 576px) {
+    .nowTemp {
+        font-size: 210px !important;
+    }
+}
+
 .cityName {
     width: 396px;
     height: 87px;
