--- a/fancy-weather/src/components/HeaderButton/style.scss
+++ b/fancy-weather/src/components/HeaderButton/style.scss
@@ -1,12 +1,26 @@
 .btnRfrshImage {
-  background-image: url(img/vector.svg);
-  background-repeat: no-repeat;
-  background-size: 22px;
-  background-position: center; 
+  background: rgba(180,184,187,.7) url(./img/mountains.svg) no-repeat bottom;
+  //background-image: url(img/vector.svg);
+  //background-repeat: no-repeat;
+  //background-size: 22px;
+  //background-position: center; 
 
     &--size44 {
         width: 44px;
         height: 44px;
+    }
+
+    .spinner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: url(./img/vector.svg) 50% no-repeat;
+        animation: spin 1.4s ease-in-out;
+        background-size: 22px;
+        background-position: center; 
+        width: 44px;
+        height: 44px;
+        margin: 0;
     }
 }
 
