--- a/fancy-weather/src/components/style.scss
+++ b/fancy-weather/src/components/style.scss
@@ -3,7 +3,8 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 .app {
-    background-color: #d1baba;  
+    /* background-color: #d1baba; */
+    background-image: url();  
     /* padding-left: 6%;
     padding-right: 6%; */ 
 }
@@ -14,6 +15,8 @@
     margin-bottom: 30px;
 }
 
-.main {
-   
+.body {
+/*     background: linear-gradient(rgba(8, 15, 26, 0.59) 0%, rgba(17, 17, 46, 0.46) 100%) center center / cover fixed, url("https://images.unsplash.com/photo-1518509398803-b5f98feac086?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEzODY1NH0") center center/cover no-repeat fixed;
+ */    animation: smoothAppearance 2s ease-in-out;
 }
+
