--- a/fancy-weather/src/components/ErrorMsg/style.scss
+++ b/fancy-weather/src/components/ErrorMsg/style.scss
@@ -1,3 +1,10 @@
 .ErrorMsg {
-    //position: absolute;
+    height: 25px;
+}
+
+.ErrorMsg__text {
+    font-family: Montserrat;
+    font-style: normal;
+    color: #ffffff;
+    font-size: 18px;
 }
